# program-nizarsyahmi37-1

./: PROJECT_DESCRIPTION.md
anchor_project/: Anchor.toml  README.md  TESTING.md  package-lock.json  package.json
anchor_project/programs/hob-dao/: Cargo.toml
anchor_project/programs/hob-dao/src/: lib.rs
anchor_project/scripts/: README.md  get-proposal-details.ts  get-proposals.ts  initialize-dao-with-token.ts  initialize-dao.js  initialize-dao.sh  initialize-dao.ts
anchor_project/tests/: hob-dao.ts
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/analytics/: GoogleAnalytics.tsx
frontend/components/modules/button/: connect.tsx  mode.tsx  vote.tsx
frontend/components/modules/card/: stats.tsx
frontend/components/modules/general/: header.tsx  layout.tsx
frontend/components/modules/theme/: provider.tsx
frontend/components/modules/view/home/: index.tsx
frontend/components/modules/view/home/listing/: grid.tsx  index.tsx  list.tsx  pagination.tsx
frontend/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  sonner.tsx
frontend/config/: index.ts
frontend/context/: index.tsx
frontend/hooks/: useAnalytics.ts  useClientMount.ts
frontend/idl/: hob_dao.json
frontend/lib/: gtag.ts  utils.ts
frontend/types/: proposal.tsx
