[package]
name = "hob-dao"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
authors = ["nizarsyahmi37 <nizarsyahmi37@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "hob_dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
solana-program = "=2.1.12"
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
